:bug: (az-checkbox) remove vertical align -webkit-baseline-middle

--- a/src/components/checkbox/az-checkbox.styl
+++ b/src/components/checkbox/az-checkbox.styl
@@ -9,7 +9,6 @@ az-checkbox {
     display: inline-block;
     margin-right: 0.5em;
     vertical-align: middle;
-    vertical-align: -webkit-baseline-middle;
     &:hover {
       border-color: var(--az-caption-color);
     }
